Sun Mar 11 13:10:50 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c: allow to enable mars for odbc tests

Sun Mar 11 09:24:27 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: fix leak using REALM option in freetds.conf

Fri Mar  9 21:51:14 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/odbc_export.pl src/odbc/sqlwchar.c:
	- deal with string printing properly for wide odbc (initial patch
	  fro Christos Zoulas)

Fri Mar  9 19:20:24 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c src/dblib/dbpivot.c:
	- removed old function in bcp.c

commented out unused function in dbpivot.c
Tue Mar  6 21:49:23 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild misc/prepare_win32.sh:
	- improve various scripts

Tue Mar  6 20:45:46 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/freeclose.c: removed already done TODO

Tue Mar  6 20:39:59 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/Makefile.am src/replacements/Makefile.am:
	* src/tds/Makefile.am:
	- move win_mutex to replacements

Tue Mar  6 20:33:07 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqldb.c src/dblib/dbpivot.c src/tds/query.c:
	- remove some warnings and compatibility issues

Sun Mar  4 12:34:17 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/socketpair.c:
	- fix socket pair emulation for Windows

Sun Mar  4 12:32:49 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	* src/odbc/unittests/connect2.c:
	- better error report on SQLConnect failure

Sat Mar  3 23:13:52 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/funccall.c:
	- does not return parameters as rows in odbc
