@@ -84,7 +84,8 @@ alloc_dsninfo(void)
 	di = (DSNINFO *) malloc(sizeof(DSNINFO));
 	tds_dstr_init(&di->origdsn);
 	tds_dstr_init(&di->dsn);
-	di->login = tds_alloc_connection(NULL);
+	di->login = tds_alloc_login(0);
+	tds_init_login(di->login, NULL);
 
 	return di;
 }
